# image_compressor

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  analysis_options.yaml  ffigen.yaml  pubspec.yaml
.dart_tool/: package_config.json  package_config_subset  package_graph.json
.dart_tool/extension_discovery/: vs_code.json
android/: build.gradle
android/src/main/: AndroidManifest.xml
example/: pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/kotlin/com/example/image_compressor_example/: MainActivity.kt
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
ios/: image_compressor.podspec
ios/Classes/: image_compressor.c  image_compressor.mm
lib/: image_compressor.dart  image_compressor_bindings_generated.dart
src/: image_compressor.cpp  image_compressor.h
src/tests/: CMakeLists.txt  test_compress_image.cpp
